force-app/main/default/objects/EYI_Inventory_Color_Mapping2__mdt/EYI_Inventory_Color_Mapping2__mdt.object-meta.xml
<CustomObject>
    <label>Inventory Color Mapping2</label>
    <pluralLabel>Inventory Color Mapping</pluralLabel>
</CustomObject>