force-app/main/default/objects/EYI_Inventory_Color_Mapping2__mdt/fields/EYI_ClassName__c.field-meta.xml
<CustomField>
    <fullName>EYI_ClassName__c</fullName>
    <label>ClassName</label>
    <type>TextArea</type>
</CustomField>