force-app/main/default/objects/EYI_Inventory_Color_Mapping2__mdt/fields/EYI_IconName__c.field-meta.xml
<CustomField>
    <fullName>EYI_IconName__c</fullName>
    <label>IconName</label>
    <type>TextArea</type>
</CustomField>