force-app/main/default/objects/EYI_Inventory_Color_Mapping2__mdt/fields/EYI_Label__c.field-meta.xml
<CustomField>
    <fullName>EYI_Label__c</fullName>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>